# snappy-c

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  cabal.project.ci  snappy-c.cabal
.github/workflows/: haskell-ci.yml
bench/: Main.hs  README.md
snappy-cli/: Main.hs  README.md
src/Codec/Compression/: SnappyC.hs
src/Codec/Compression/SnappyC/: Framed.hs  Internal.hs  Raw.hs
src/Codec/Compression/SnappyC/Internal/: Buffer.hs  C.hs  Checksum.hs  FrameFormat.hs  Util.hs
test/: Main.hs
test/Test/Prop/: Orphans.hs  RoundTrip.hs
