cabal-version:      3.0
name:               snappy-c
version:            0.1.0
synopsis:           Bindings to the snappy-c.h compression library
description:        [Snappy](https://github.com/google/snappy) is a fast
                    compressor/decompressor. It is written in C++, but a very
                    basic set of C bindings are also provided. This library
                    enables usage of those C bindings from Haskell.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Finley McIlwaine
maintainer:         finley@well-typed.com
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.4
                  , GHC==9.8.1

common lang
  ghc-options:
      -Wall
  build-depends:
      base >= 4.14 && < 4.20
  default-language:
      Haskell2010
  default-extensions:
      ImportQualifiedPost
      OverloadedStrings
      NumericUnderscores
  if impl(ghc >= 9.0)
    ghc-options:
      -- This was introduced in 8.10, but it does not work reliably until 9.0.
      -- In 8.10 you might get spurious warnings when using re-exported modules
      -- (e.g. in proto-lens-runtime).
      -Wunused-packages

library
  import: lang
  hs-source-dirs:
      src
  exposed-modules:
      Codec.Compression.SnappyC
  other-modules:
      Codec.Compression.SnappyC.Internal
  build-depends:
    , bytestring >= 0.10 && < 0.13
  extra-libraries:
    , snappy

test-suite test-snappy-c
  import: lang
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:
      Main.hs
  build-depends:
      -- Internal dependencies
    , snappy-c
  build-depends:
      -- External dependencies
    , bytestring           >= 0.10 && < 0.13
    , quickcheck-instances >= 0.3  && < 0.4
    , tasty                >= 1.4  && < 1.6
    , tasty-hunit          >= 0.10 && < 0.11
    , tasty-quickcheck     >= 0.10 && < 0.11
  ghc-options:
      -threaded
      -rtsopts
