cabal-version:      3.0
name:               snappy-c
version:            0.1.0
synopsis:           Bindings to the snappy-c.h compression library
description:        [Snappy](https://github.com/google/snappy) is a fast
                    compressor/decompressor. It is written in C++, but a very
                    basic set of C bindings are also provided. This library
                    enables usage of those C bindings from Haskell.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Finley McIlwaine
maintainer:         finley@well-typed.com
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.4
                  , GHC==9.8.1

common lang
  ghc-options:
      -Wall
      -Wunused-packages
      -Wprepositive-qualified-module
      -Widentities
  build-depends:
      base >= 4.16 && < 4.20
  default-language:
      Haskell2010
  default-extensions:
      BangPatterns
      DataKinds
      DeriveAnyClass
      DeriveFunctor
      DerivingStrategies
      DerivingVia
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      NumericUnderscores
      OverloadedStrings
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies

library
  import:
      lang
  hs-source-dirs:
      src
  exposed-modules:
      Codec.Compression.SnappyC.Raw
      Codec.Compression.SnappyC.Framed
  other-modules:
      Codec.Compression.SnappyC.Internal.Buffer
      Codec.Compression.SnappyC.Internal.C
      Codec.Compression.SnappyC.Internal.Checksum
      Codec.Compression.SnappyC.Internal.FrameFormat
      Codec.Compression.SnappyC.Internal.Util
  build-depends:
    , bytestring   >= 0.11  && < 0.13
    , data-default >= 0.7   && < 0.8
    , digest       >= 0.0.2 && < 0.0.3
    , mtl          >= 2.2.2 && < 2.4
  extra-libraries:
    , snappy

executable snappy-cli
  import:
      lang
  hs-source-dirs:
      snappy-cli
  main-is:
      Main.hs
  build-depends:
      snappy-c

    , bytestring
    , conduit
    , data-default
    , optparse-applicative
  ghc-options:
      -threaded
      -rtsopts

test-suite test-snappy-c
  import:
      lang
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Main.hs
  other-modules:
    , Test.Prop.Orphans
    , Test.Prop.RoundTrip
  build-depends:
      -- Internal dependencies
    , snappy-c
  build-depends:
      -- External dependencies
    , bytestring
    , tasty
    , tasty-hunit
    , tasty-quickcheck
  ghc-options:
      -threaded
      -rtsopts

benchmark bench-snappy-c
  import:
      lang
  type:
      exitcode-stdio-1.0
  main-is:
      bench/Main.hs
  build-depends:
    -- internal
    , snappy-c

    -- external
    , bytestring
    , criterion
    , deepseq
    , random
    , snappy-lazy
    , zlib

  ghc-options:
      -threaded
      -rtsopts